<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/tname"
        android:id="@+id/addstudentname"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/temail"
        android:id="@+id/addparentemail"
        android:layout_below="@+id/addstudentname"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/tschool"
        android:id="@+id/addstudentschool"
        android:layout_below="@+id/addparentemail"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/tmobile"
        android:id="@+id/addstudentphone"
        android:layout_below="@+id/addstudentschool"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/addstudentphone"
        android:layout_centerHorizontal="true"
        android:id="@+id/radioGroup">



        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:id="@+id/maleRadioBtn" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:id="@+id/femaleRadioBtn"
            android:layout_gravity="center_horizontal" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/addstudentbtn"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true" />

</RelativeLayout>