<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/main_color_gray_dk1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lineartablayout">

        <Button
            android:enabled="true"
            android:id="@+id/tab1"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="details"
            android:layout_weight="1.0" style="@style/tab_btn" />

        <View
            android:id="@+id/view1"
            android:background="@color/main_color_gray_lt"
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/pad_10dp"
            android:layout_marginBottom="@dimen/pad_10dp" />

        <Button
            android:id="@+id/tab2"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="summary"
            android:layout_weight="1.0" style="@style/tab_btn" />

        <View
            android:id="@id/view1"
            android:background="@color/main_color_gray_lt"
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/pad_10dp"
            android:layout_marginBottom="@dimen/pad_10dp" />

        <Button
            android:id="@+id/tab3"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="comments"
            android:layout_weight="1.0" style="@style/tab_btn" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineartablayout" >


    <TextView
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/tname"
        android:id="@+id/studentname"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/temail"
        android:layout_below="@+id/studentname"
        android:layout_centerHorizontal="true"
        android:id="@+id/addparentemail"/>

    <TextView
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/tschool"
        android:id="@+id/addstudentschool"
        android:layout_below="@+id/addparentemail"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/tmobile"
        android:id="@+id/addstudentphone"
        android:layout_below="@+id/addstudentschool"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tedit"
        android:id="@+id/edittprofilebtn"
        android:layout_below="@+id/addstudentphone"
        android:layout_centerHorizontal="true" />

        </RelativeLayout>



</RelativeLayout>